[spreadsheet] seed the random number generator with the current time in order not to generate repetitive numbers in the spreadsheet.

BUG: 410855
FIXED-IN: 2.7