src/kdefrontend/spreadsheet/RandomValuesDialog.cpp
@@ -388,6 +388,7 @@ void RandomValuesDialog::generate() {
 	gsl_rng_env_setup();
 	const gsl_rng_type* T = gsl_rng_default;
 	gsl_rng* r = gsl_rng_alloc(T);
+	gsl_rng_set(r, QDateTime::currentMSecsSinceEpoch());
 
 	WAIT_CURSOR;
 	for (auto* col : m_columns)
